retrieveSource/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fonction_du_client__c</fullName>
        <label>Fonction du client</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Support_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales users use this field to indicate to Support which customers have support plans.</description>
        <inlineHelpText>Does this customer have a current support plan? Check this box when you sell a support plan to this customer.</inlineHelpText>
        <label>Has Support Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_SolarBots__c</fullName>
        <label>Number of SolarBots</label>
        <summaryForeignKey>SolarBot__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_legal__c</fullName>
        <inlineHelpText>Vous avez oublié de renseigner ce champ.</inlineHelpText>
        <label>Numéro légal</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position_du_partenaire__c</fullName>
        <label>Position du partenaire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position_globale_du_partenaire__c</fullName>
        <label>Position globale du partenaire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position_hebodomadaire_du_partenaire__c</fullName>
        <label>Position hebodomadaire du partenaire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Customer’s geographical region—for sales operations use only.</description>
        <inlineHelpText>In which region is the customer based?</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.TotalOpportunityQuantity</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Plan_Expiration_Date__c</fullName>
        <description>Expiration date of current support plan</description>
        <inlineHelpText>When is the current support plan due for renewal?</inlineHelpText>
        <label>Support Plan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Plan_Start_Date__c</fullName>
        <description>Start date of current support plan</description>
        <inlineHelpText>When did the current support plan begin?</inlineHelpText>
        <label>Support Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Customer’s zone within the selected region—for sales operations use only.</description>
        <inlineHelpText>In which zone is this customer based? Depends on region.</inlineHelpText>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>UK + Ireland</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Midwest US</fullName>
                </value>
                <value>
                    <fullName>Northeast US</fullName>
                </value>
                <value>
                    <fullName>Southeast US</fullName>
                </value>
                <value>
                    <fullName>Southwest US</fullName>
                </value>
                <value>
                    <fullName>West US</fullName>
                </value>
                <value>
                    <fullName>Northern Canada</fullName>
                </value>
                <value>
                    <fullName>Mountains and the West</fullName>
                </value>
                <value>
                    <fullName>The Prairies</fullName>
                </value>
                <value>
                    <fullName>Central Canada</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Adversaire_Particulier</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Adversaire_Particulier</value>
        </filters>
        <label>Adversaire (Particulier)</label>
    </listViews>
    <listViews>
        <fullName>Adversaire_Societe</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Adversaire_Societe</value>
        </filters>
        <label>Adversaire (Société)</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Client_Particulier</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client_Particulier</value>
        </filters>
        <label>Client (Particulier)</label>
    </listViews>
    <listViews>
        <fullName>Client_Societe</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client_societe</value>
        </filters>
        <label>Client (Société)</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Partenaire</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partenaire</value>
        </filters>
        <label>Partenaire</label>
    </listViews>
    <recordTypes>
        <fullName>Adversaire_Particulier</fullName>
        <active>true</active>
        <description>Pour les adversaires particuliers</description>
        <label>Adversaire (Particulier)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adversaire_Societe</fullName>
        <active>true</active>
        <description>Pour les adversaires dans l&apos;affaire</description>
        <label>Adversaire (Société)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Particulier</fullName>
        <active>true</active>
        <description>Pour les clients particuliers</description>
        <label>Client (Particulier)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_societe</fullName>
        <active>true</active>
        <description>Pour les clients du type société</description>
        <label>Client (Société)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <description>For customers and prospects</description>
        <label>Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Executive_Team_test</fullName>
        <active>true</active>
        <label>Executive Team test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partenaire</fullName>
        <active>true</active>
        <description>Pour les partenaires</description>
        <label>Partenaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account</fullName>
        <active>true</active>
        <label>Partner Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_8_Characters</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( AccountNumber) != 8</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account number must be 8 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Adversaire_Particulier</fullName>
        <active>false</active>
        <description>Adversaire Particulier</description>
        <errorConditionFormula>AND(BillingCountry = &quot;Maroc&quot; &amp;&amp; (RecordType.Name =&quot;Adversaire_Particulier&quot;),
NOT(REGEX(Numero_legal__c, &quot;[A-Z]+[A-Z]*[0-9]{5}[0-9]*&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous cette forme: A123456 ou AB12345 pour les particuliers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Adversaire_Societe</fullName>
        <active>false</active>
        <description>Cette règle concerne les Adversaire de type Société.</description>
        <errorConditionFormula>AND( BillingCountry = &quot;Maroc&quot; &amp;&amp; RecordType.DeveloperName =&quot;Adversaire_Societe&quot;,
NOT(REGEX(Numero_legal__c, &quot;[0-9]{15}&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous forme de 15 chiffres pour les sociétés</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Client_Particulier</fullName>
        <active>false</active>
        <description>Client Particulier</description>
        <errorConditionFormula>AND(BillingCountry = &quot;Maroc&quot; &amp;&amp; (RecordType.Name =&quot;Client_Particulier&quot;),
NOT(REGEX(Numero_legal__c, &quot;[A-Z]+[A-Z]*[0-9]{5}[0-9]*&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous cette forme: A123456 ou AB12345 pour les particuliers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Client_Societe</fullName>
        <active>false</active>
        <description>Cette règle concerne les clients de type Société.</description>
        <errorConditionFormula>AND(BillingCountry = &quot;Maroc&quot; , RecordType.DeveloperName = &quot;Client_societe&quot;,
NOT(REGEX(Numero_legal__c, &quot;[0-9]{15}&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous forme de 15 chiffres pour les sociétés.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Partenaire</fullName>
        <active>false</active>
        <description>Cette règle concerne les Partenaire.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Partenaire&quot;,
NOT(REGEX(Numero_legal__c, &quot;[0-9]{15}&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous forme de 15 chiffres pour les sociétés</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Particulier</fullName>
        <active>true</active>
        <description>Pour les comptes Particuliers</description>
        <errorConditionFormula>AND(BillingCountry = &quot;Maroc&quot; &amp;&amp; ((RecordType.DeveloperName =&quot;Client_Particulier&quot; || RecordType.DeveloperName =&quot;Adversaire_Particulier&quot;)),
NOT(REGEX(Numero_legal__c, &quot;[A-Z]{1}[0-9]{6}|[A-Z]{2}[0-9]{5}&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous cette forme: A123456 ou AB12345 pour les particuliers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Numero_Legal_Societe</fullName>
        <active>true</active>
        <description>Cette règle concerne les compte de type Société.</description>
        <errorConditionFormula>AND(BillingCountry = &quot;Maroc&quot; &amp;&amp; ((RecordType.DeveloperName =&quot;Client_societe&quot;) || (RecordType.DeveloperName =&quot;Adversaire_Societe&quot;) || (RecordType.DeveloperName =&quot;Partenaire&quot;)),
NOT(REGEX(Numero_legal__c, &quot;[0-9]{15}&quot;)))</errorConditionFormula>
        <errorMessage>Un numéro légal se présente sous forme de 15 chiffres pour les sociétés.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_plan_expiration_date_required</fullName>
        <active>false</active>
        <description>Support plan expiration date is required when account is marked as having support plan.</description>
        <errorConditionFormula>Has_Support_Plan__c = True &amp;&amp; ISBLANK(Support_Plan_Expiration_Date__c)</errorConditionFormula>
        <errorDisplayField>SLAExpirationDate__c</errorDisplayField>
        <errorMessage>You must enter an expiration date when an account has a support plan.</errorMessage>
    </validationRules>
</CustomObject>